--- a/Processing_Outline.Rmd
+++ b/Processing_Outline.Rmd
@@ -22,10 +22,15 @@ Some initial data cleaning was done including
 
 Data was run through OCADS data and metadata generation scripts. Then submitted via SDIS (the OCADS submission platform).
 
-# BioChem Submission
+OCADS_data_generation.R
+OCADS_metadata_generation.R
 
-In progress!
+# BioChem Submission
 
 First, cruise information was submitted to Jay Bugden to be loaded into OSC cruise. 
 (see osccruise_davisstrait.xlsx)
 
+Then BCD and BCS tables were created based on extdata/biochem_dictionary.xlsx
+
+BioChem_data_generation.R
+BioChem_metadata_generation.R
