biochem loading update
updated biochem processing to fix issues discovered in process of loading
- QC only bottle methods (not CTD!)
- round depth values to 0 precision and remove any negatives
- add preprocessing

--- a/Processing_Outline.Rmd
+++ b/Processing_Outline.Rmd
@@ -34,3 +34,6 @@ Then BCD and BCS tables were created based on extdata/biochem_dictionary.xlsx
 
 BioChem_data_generation.R
 BioChem_metadata_generation.R
+
+Some manual edits were made that should be coded in to future developments.
+ negative depth values were adjusted to 0
